# EFT_log_analizer

./: .gitignore  README.md  main.py  pyproject.toml
localization_ts/: ru_RU.ts
src/: constants.py  main_widget.py  utils.py
src/server_analyze/: widget.py
src/settings/: constants.py  settings.py  thread_manager.py  utils.py  widget.py
src/static/localization/: ru_RU.qm
src/static/qss/: style.qss
src/updater/: updater.py
src/version/: widget.py
src/widgets/: log_search_widget.py  main_widget.py  server_analyze_widget.py  settings_widget.py
