[tool.poetry]
name = "eft-log-analizer"
version = "0.1.0"
description = ""
authors = ["ledxdeliveryflopp <korstim18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aiofiles = "^24.1.0"
httpx = "^0.27.0"
pyside6 = "^6.7.2"
pyinstaller = "^6.10.0"
requests = "^2.32.3"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
